test/interop/C/exportString/badFormalInIntent.chpl





export proc badFormalIntent(in s: string) {
  return "Some unimportant message!";
}
